--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <head>
 	<title>Peekaboo for Unsupervised Object Localization</title>
 	<meta property="og:image" content="./resources/model.png"/> <!-- Facebook automatically scrapes this. Go to https://developers.facebook.com/tools/debug/ if you update and want to force Facebook to rescrape. -->
-	<meta property="og:title" content="PEEKABOO: Hiding Parts of an Image for Unsupervised Object Localization" />
+	<meta property="og:title" content="(WEBPAGE UNDER DEVELOPMENT!) PEEKABOO: Hiding Parts of an Image for Unsupervised Object Localization" />
 	<meta property="og:description" content="Paper description." />
 
 	<!-- Get from Google Analytics -->
