--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 <body>
 	<br>
 	<center>
-		<span style="font-size:36px">PEEKABOO: Hiding Parts of an Image for Unsupervised Object Localization</span>
+		<span style="font-size:36px">(WEBPAGE UNDER DEVELOPMENT!) PEEKABOO: Hiding Parts of an Image for Unsupervised Object Localization</span>
 		<table align=center width=600px>
 			<table align=center width=450px> <!--Adjust for spacing between author names-->
 				<tr>
