--- a/index.html
+++ b/index.html
@@ -322,9 +322,10 @@
 				<br><br>
 
 				<i> 
-					Our appraoch aim to explicitly model contextual relationship among pixels through image masking for unsupervised object localization. 
-					In a self-training procedure, context-based representation learning is done at both the pixel-level by making predictions on masked images and at shape-level by matching the 
-					predictions of the masked input to the unmasked one.
+					Our approach aims to explicitly model contextual relationship among pixels through image masking for 
+					unsupervised object localization. In a self-supervised procedure (i.e. pretext task) without any additional 
+					training (i.e. downstream task), context-based representation learning is done at both the pixel-level by 
+					making predictions on masked images and at shape-level by matching the predictions of the masked input to the unmasked one.
 				</i>
 
 				<br><br>
