--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <head>
 	<title>Peekaboo for Unsupervised Object Localization</title>
 	<meta property="og:image" content="./resources/model.png"/> <!-- Facebook automatically scrapes this. Go to https://developers.facebook.com/tools/debug/ if you update and want to force Facebook to rescrape. -->
-	<meta property="og:title" content="(WEBPAGE UNDER DEVELOPMENT!) PEEKABOO: Hiding Parts of an Image for Unsupervised Object Localization" />
+	<meta property="og:title" content="PEEKABOO: Hiding Parts of an Image for Unsupervised Object Localization" />
 	<meta property="og:description" content="Paper description." />
 
 	<!-- Get from Google Analytics -->
@@ -224,7 +224,7 @@
 					
 					<td align=center width=80px>
 						<center>
-							<span style="font-size:24px"><a href='TBA'>[Paper]</a></span>
+							<span style="font-size:24px"><a href='https://arxiv.org/abs/2407.17628'>[Paper]</a></span>
 						</center>
 					</td>
 
@@ -413,7 +413,7 @@
 				<b>PEEKABOO: Hiding Parts of an Image for Unsupervised Object Localization.</b><br>
 				In BMVC, 2024.<br>
 				<!--Add arXiv link-->
-				(hosted on <a href="https://arxiv.org/abs/2310.18517">ArXiv</a>)<br>
+				(hosted on <a href="https://arxiv.org/abs/2407.17628">ArXiv</a>)<br>
 				</span>
 			</td>
 		</tr>
