--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 					
 					<td align=center width=80px>
 						<center>
-							<span style="font-size:24px"><a href='https://github.com/hasibzunair/peekaboo?tab=readme-ov-file#4-demo'>[Demo]</a></span><br>
+							<span style="font-size:24px"><a href='https://huggingface.co/spaces/hasibzunair/peekaboo-demo'>[Demo]</a></span><br>
 						</center>
 					</td>
 					
