--- a/index.html
+++ b/index.html
@@ -333,8 +333,7 @@
 				<i>
 
 					We also explored this technique in supervised settings in our previous works. Specifically, for <a href="https://openaccess.thecvf.com/content/WACV2024/html/Zunair_Learning_To_Recognize_Occluded_and_Small_Objects_With_Partial_Inputs_WACV_2024_paper.html"><strong>recognition</strong></a> 
-					of small and occluded objects (WACV 2024) and for <a href="https://arxiv.org/abs/2210.00923"><strong>segmentation</strong></a> of ambiguous regions and is shape aware as it enables to quite well 
-					segment heavily masked regions while being simple and compute efficient (BMVC 2022, Oral).
+					of small and occluded objects (WACV 2024) and for <a href="https://arxiv.org/abs/2210.00923"><strong>segmentation</strong></a> of ambiguous regions and is shape aware while being simple and compute efficient (BMVC 2022, Oral).
 				</i>
 
 				<br><br>
