update with new in-the-wild images

--- a/media/description.html
+++ b/media/description.html
@@ -12,7 +12,7 @@
     In a self-supervised procedure (i.e. pretext task) without any additional training (i.e. downstream task), context-based representation learning is done at both 
     the pixel-level by making predictions on masked images and at shape-level by matching the predictions of the masked input to the unmasked one.
     </br>
-    You can use this demo to segment the most salient object(s) in your images. To use it, simply 
+    You can use this demo to segment the most salient as well as novel object(s) in your images. To use it, simply 
     upload an image of your choice and hit submit. You will get one or more segmentation maps of the most salient objects present 
     in your images.
     </br>
