add talk, video demo

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 <body>
 	<br>
 	<center>
-		<span style="font-size:36px">PEEKABOO: Hiding Parts of an Image for Unsupervised Object Localization</span>
+		<span style="font-size:33px">PEEKABOO: Hiding Parts of an Image for Unsupervised Object Localization</span>
 		<table align=center width=600px>
 			<table align=center width=450px> <!--Adjust for spacing between author names-->
 				<tr>
@@ -228,22 +228,18 @@
 						</center>
 					</td>
 
-					<!--  
 					<td align=center width=80px>
 						<center>
-							<span style="font-size:24px"><a href='TBA'>[Video]</a></span>
+							<span style="font-size:24px"><a href='https://youtu.be/W2nzI_TzBPs'>[Video]</a></span>
 						</center>
 					</td>
 
-
 					<td align=center width=80px>
 						<center>
-							<span style="font-size:24px"><a href='TBA'>[Poster]</a></span>
+							<span style="font-size:24px"><a href='./resources/bmvc24-poster-305.pdf'>[Poster]</a></span>
 						</center>
 					</td>
-					-->
 
-					
 					<!--  
 					<td align=center width=120px>
 						<center>
@@ -352,46 +348,6 @@
 	<br>
 	<hr>
 
-	<center><h1>Results on unfamiliar images and objects</h1></center>
-	We show some results of Peekaboo on unfamiliar objects that are out-of-domain of ImageNet and DUT-TR, of different scales and shapes which 
-	are correctly localized. Specifically, octopus, dinosaurs and spaceships are not present in ImageNet/DUT-TR, Peekaboo can still detect them. 
-	These results show the ability of Peekaboo to discover multiple and diverse objects, basically which "are not background".
-
-	<br><br>
-
-	<table align=center width=400px>
-			<td align=center width=400px>
-				<center>
-					<td><img class="round" style="width:1000px" src="./resources/images.png"/></td>
-				</center>
-			</td>
-		</tr>
-	</table>
-
-	<br>
-	<hr>
-
-	<center><h1>Try the Interactive Demo</h1></center>
-	
-	<table align=center width=400px>
-		<tr>
-			<td align=center width=400px>
-			<center>
-				<td><a href='https://huggingface.co/spaces/hasibzunair/peekaboo-demo'><img class="round" style="width:800px" src="./resources/spaces.png"/></a></td>
-			</center>
-	  </tr>
-  </table>
-
-  	<table align=center width=100px>
-		<tr>
-			<center> <br>
-	  		<span style="font-size:28px"><a href='https://huggingface.co/spaces/hasibzunair/peekaboo-demo'>[🤗 Spaces]</a> Demo</span></span><i></i>
-			</center></tr>
-	</table>
-
-	<br>
-	<hr>
-
 	<table align=center width=900px>
 		<center><h1>Abstract</h1></center>
 		<tr>
@@ -416,28 +372,83 @@
 	<br>
 	<hr>
 
-	<!--Add YouTube talk here.-->
-	<!--
-	<center><h1>Talk</h1></center>
-	<p align="center">
-		<iframe width="660" height="395" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center"></iframe>
-	</p>
+	<center><h1>Results on unfamiliar images and objects</h1></center>
+	We show some results of Peekaboo on unfamiliar objects that are out-of-domain of ImageNet and DUT-TR, of different scales and shapes which 
+	are correctly localized. Specifically, octopus, dinosaurs and spaceships are not present in ImageNet/DUT-TR, Peekaboo can still detect them. 
+	These results show the ability of Peekaboo to discover multiple and diverse objects, basically which "are not background".
 
-	<table align=center width=800px>
-		<br>
-		<tr>
-			<center>
-				<span style="font-size:28px"><a href=''>[Slides]</a>
-				</span>
-			</center>
+	<br><br>
+
+	<table align=center width=400px>
+			<td align=center width=400px>
+				<center>
+					<td><img class="round" style="width:1000px" src="./resources/images.png"/></td>
+				</center>
+			</td>
 		</tr>
 	</table>
+
 	<br>
 	<hr>
-	-->
+
+	<!--Add YouTube talk here.-->
+	
+	<center><h1>Videos</h1></center>
+	<table align=center width=800px>
+		<tr>
+		<td align=center width=800px>
+		  <iframe width="800" height="450" src="https://www.youtube.com/embed/W2nzI_TzBPs" frameborder="0" allowfullscreen></iframe>
+		</td>
+	  </tr>
+	  <tr>
+		<td align=center width=600px>
+		<span style="font-size:22px">BMVC Talk 11/2024, also see <a href='./resources/305_Peekaboo_BMVC24_presentation.pdf'>[Slides]</a>.</span>
+		</td>
+	  </tr>
+	</table>
+	
+	<br>
+
+	<table align=center width=800px>
+		<tr>
+		<td align=center width=800px>
+		  <iframe width="800" height="450" src="https://www.youtube.com/embed/cvJcH8xm9u8" frameborder="0" allowfullscreen></iframe>
+		</td>
+	  </tr>
+	  <tr>
+		<td align=center width=600px>
+		<span style="font-size:22px">Running Peekaboo on video feed from a webcam.</span>
+		</td>
+	  </tr>
+	</table>
+
+	<br>
+	<hr>
+
+
+	<center><h1>Try the Interactive Demo</h1></center>
+	
+	<table align=center width=400px>
+		<tr>
+			<td align=center width=400px>
+			<center>
+				<td><a href='https://huggingface.co/spaces/hasibzunair/peekaboo-demo'><img class="round" style="width:800px" src="./resources/spaces.png"/></a></td>
+			</center>
+	  </tr>
+  </table>
+
+  	<table align=center width=100px>
+		<tr>
+			<center> <br>
+	  		<span style="font-size:28px"><a href='https://huggingface.co/spaces/hasibzunair/peekaboo-demo'>[🤗 Spaces]</a> Demo</span></span><i></i>
+			</center></tr>
+	</table>
+
+	<br>
+	<hr>
 
 	<!--Add demo code here with architecture.-->
-	<center><h1>Our Method</h1></center>
+	<center><h1>Try Peekaboo!</h1></center>
 	<table align=center width=400px>
 		<tr>
 			<td align=center width=400px>
